[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "airbnb-listing-analysis"
version = "0.0.1"
description = "Analyze AirBnB listings in Paris to determine the impact of recent regulations"
authors = [
  { name = "Krist\u00f3f N\u00e9meth" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["airbnb-listing-analysis"]
force_sort_within_sections = true
